Change way options work (#17)
Signed-off-by: jasperpotts <jasperpotts@users.noreply.github.com>
Co-authored-by: jasperpotts <jasperpotts@users.noreply.github.com>