@@ -17,7 +17,7 @@ repositories {
 
 dependencies {
     implementation("com.hedera.pbj:pbj-runtime:${project.version}")
-    implementation("com.google.protobuf:protobuf-java:3.21.9")
+    implementation("com.google.protobuf:protobuf-java:3.21.12")
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.0")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.9.0")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.0")
@@ -50,7 +50,7 @@ protobuf {
     // Configure the protoc executable
     protoc {
         // Download from repositories
-        artifact = "com.google.protobuf:protoc:3.21.10"
+        artifact = "com.google.protobuf:protoc:3.21.12"
     }
 }
 
@@ -62,14 +62,17 @@ tasks.withType<Test> {
     // We are running a lot of tests 10s of thousands, so they need to run in parallel
     systemProperties["junit.jupiter.execution.parallel.enabled"] = true
     systemProperties["junit.jupiter.execution.parallel.mode.default"] = "concurrent"
-//    maxParallelForks = (Runtime.getRuntime().availableProcessors() / 3).takeIf { it > 0 } ?: 1
+    // us parallel GC to keep up with high temporary garbage creation, and allow GC to use 40% of CPU if needed
+    jvmArgs("-XX:+UseParallelGC","-XX:GCTimeRatio=90")
+//    jvmArgs("-XX:+UseZGC","-XX:ZAllocationSpikeTolerance=2")
+//    jvmArgs("-XX:+UseG1GC", "-XX:GCTimeRatio=90", "-XX:MaxGCPauseMillis=100")
     // Some also need more memory
     minHeapSize = "512m"
-    maxHeapSize = "3072m"
+    maxHeapSize = "4096m"
 }
 
 jmh {
-    includes.add("AccountDetailsBench")
+//    includes.add("AccountDetailsBench")
     jmhVersion.set("1.35")
     includeTests.set(true)
 //    jvmArgsAppend.add("-XX:MaxInlineSize=100 -XX:MaxInlineLevel=20")
